# RP-FinalProject

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
config/: capper_2r.json  cappero_1r.json
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/.private/mrsim/: .catkin  .rosinstall  setup.sh
devel/.private/mrsim/lib/mrsim/: mrsim_node
devel/.private/mrsim/lib/pkgconfig/: mrsim.pc
devel/.private/mrsim/share/mrsim/cmake/: mrsimConfig.cmake
devel/lib/mrsim/: mrsim_node
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  mrsim.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/mrsim/cmake/: mrsimConfig-version.cmake  mrsimConfig.cmake
logs/mrsim/: build.make.005.log.stderr
src/mrsim/: CMakeLists.txt
src/mrsim/include/: lidar.h  robot.h  world.h
src/mrsim/src/: lidar.cpp  main.cpp  robot.cpp  world.cpp
